--- a/index.html
+++ b/index.html
@@ -4,7 +4,13 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Rajan</title>
+    <meta name="description" content="Rajan Mandal - Full Stack Developer (MERN) specializing in building scalable web applications with MongoDB, Express.js, React, and Node.js. B.Tech CSE student with expertise in DSA and Cloud Computing." />
+    <meta name="keywords" content="Rajan Mandal, Full Stack Developer, MERN Stack, React, Node.js, MongoDB, Web Developer, Portfolio" />
+    <meta name="author" content="Rajan Mandal" />
+    <meta property="og:title" content="Rajan Mandal - Full Stack Developer Portfolio" />
+    <meta property="og:description" content="Aspiring Full-Stack Developer with experience in building scalable and secure web applications using MERN Stack" />
+    <meta property="og:type" content="website" />
+    <title>Rajan Mandal - Full Stack Developer Portfolio</title>
   </head>
   <body>
     <div id="root"></div>
